--- a/action.yml
+++ b/action.yml
@@ -40,6 +40,6 @@ runs:
         
         for index in ${!REPOS[*]}; do 
           echo "Checking out '${REPOS[$index]}' with branch '${REPOS_BRANCHES[$index]}' in folder '${REPOS_FOLDERS[$index]}'"                        
-          git clone https://github.com/${REPOS[$index]} ./${REPOS_FOLDERS[$index]}
+          git clone https://${{inputs.personal-access-token}}@github.com/${REPOS[$index]} ./${REPOS_FOLDERS[$index]}
         done
       shell: bash
