--- a/action.yml
+++ b/action.yml
@@ -54,7 +54,7 @@ runs:
       shell: pwsh
     - name: Build
       run: msbuild ${{inputs.build-path}} /verbosity:normal /t:Rebuild /t:PackageForAndroid /t:SignAndroidPackage /p:Configuration=${{inputs.build-configuration}} 
-      shell: pwsh
+      shell: shell
     - name: Upload .AAB for Android
       uses: actions/upload-artifact@v1
       with:
