--- a/action.yml
+++ b/action.yml
@@ -57,6 +57,9 @@ runs:
     - name: Build
       run: msbuild ${{inputs.build-path}} /verbosity:normal /t:Rebuild /t:PackageForAndroid /t:SignAndroidPackage /p:Configuration=${{inputs.build-configuration}} 
       shell: pwsh
+    - name: Check
+      run: description
+      shell: pwsh
     - name: Upload .AAB for Android
       uses: actions/upload-artifact@v1
       with:
